--- a/app/src/main/res/menu/activity_info_details_menu.xml
+++ b/app/src/main/res/menu/activity_info_details_menu.xml
@@ -10,6 +10,6 @@
     <item
         android:id="@+id/action_click_me"
         android:orderInCategory="100"
-        android:title="点我"
+        android:title="暂无"
         app:showAsAction="never" />
 </menu>
